# clang_refactoring

./: CMakeLists.txt  README.md  refactor_stage1.cpp  refactor_stage1_wave_msm.cpp  refactor_stage2.cpp  test.cpp
